# FINAL_PROJECT

./: .gitignore  README.md  log.txt  test.c
NTHU_ADVANTURE/: .gitignore  CMakeLists.txt  Makefile  json.hpp  main.cpp
NTHU_ADVANTURE/Engine/: AudioHelper.cpp  Group.cpp  Group.hpp  LanguageManager.cpp  LanguageManager.hpp  Resources.cpp  Resources.hpp
NTHU_ADVANTURE/NPC/: NPC.cpp  NPC.hpp  NPCDialog.cpp  NPCDialog.hpp  Shopper.cpp  Shopper.hpp
NTHU_ADVANTURE/NoUse/: ScoreboardScene.hpp  StageSelectScene.cpp
NTHU_ADVANTURE/Player/: BattlePlayer.cpp  BattlePlayer.hpp  Player.cpp  Player.hpp
NTHU_ADVANTURE/Resource/: CGLake.txt  EE.txt  account.txt  lang_en.txt  lang_zh.txt  lottery.txt  mainworld.txt  smalleat.txt  tmp.txt  waterwood.txt
NTHU_ADVANTURE/Scene/: AIChatScene.cpp  AIChatScene.hpp  BattleScene.cpp  BattleScene.hpp  CGLakeScene.cpp  CGLakeScene.hpp  DialogScene.cpp  DialogScene.hpp  EEScene.cpp  EEScene.hpp  LogScene.cpp  LogScene.hpp  LoseScene.cpp  NEWScene.cpp  NewScene.hpp  PlayScene.cpp  PlayScene.hpp  RealScene.cpp  RealScene.hpp  RegisterScene.cpp  RegisterScene.hpp  ScoreboardScene.cpp  ScoreboardScene.hpp  SettingsScene.cpp  SettingsScene.hpp  SmallEatScene.cpp  SmallEatScene.hpp  StartScene.cpp  StartScene.h  TaldaScene.cpp  TaldaScene.hpp  WaterWoodScene.cpp  WaterWoodScene.hpp  WinScene.cpp  WindCloudScene.cpp  WindCloudScene.hpp  tmpScene.cpp  tmpScene.hpp
NTHU_ADVANTURE/UI/Component/: CustomImageButton.cpp  CustomImageButton.hpp  ImageButton.cpp  ImageButton.hpp  Label.cpp  Label.hpp  Slider.cpp  Slider.hpp
final project/: test.cpp
final project/Engine/: IObject.hpp  Sprite.cpp
